--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nathanfaucett/virt-dom",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "virt DOM is a render adapter for virt",
   "repository": {
     "type": "git",
@@ -21,7 +21,7 @@
     "workers": "comn -f ./examples/workers/src/index.js -o ./examples/workers/index.min.js && comn -f ./examples/workers/src/worker.js -o ./examples/workers/worker.min.js",
     "worker_form": "comn -f ./examples/worker_form/src/index.js -o ./examples/worker_form/index.min.js && comn -f ./examples/worker_form/src/worker.js -o examples/worker_form/worker.min.js",
     "websocket_form": "comn -f ./examples/websocket_form/src/index.js -o ./examples/websocket_form/index.min.js",
-    "examples": "npm run simple && npm run replace && npm run components && npm run workers && npm run worker_form && npm run websocket_form",
+    "examples": "npm run input_events && npm run simple && npm run replace && npm run components && npm run workers && npm run worker_form && npm run websocket_form",
     "build": "task && task dist && npm run examples"
   },
   "author": "Nathan Faucett",
@@ -84,6 +84,6 @@
     "@nathanfaucett/messenger_worker_adapter": "^0.0.1",
     "@nathanfaucett/now": "^0.0.3",
     "@nathanfaucett/supports": "^0.0.1",
-    "@nathanfaucett/virt": "^0.0.6"
+    "@nathanfaucett/virt": "^0.0.7"
   }
 }
