--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nathanfaucett/virt-dom",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "description": "virt DOM is a render adapter for virt",
   "repository": {
     "type": "git",
@@ -28,14 +28,14 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "@nathanfaucett/comn": "^0.0.11",
-    "@nathanfaucett/event_emitter": "^0.0.2",
-    "@nathanfaucett/file_path": "0.0.3",
-    "@nathanfaucett/parallel": "^0.0.1",
-    "@nathanfaucett/prop_types": "^0.0.1",
+    "@nathanfaucett/comn": "^0.0.12",
+    "@nathanfaucett/event_emitter": "^0.0.3",
+    "@nathanfaucett/file_path": "^0.0.4",
+    "@nathanfaucett/parallel": "^0.0.2",
+    "@nathanfaucett/prop_types": "^0.0.2",
     "@nathanfaucett/request_animation_frame": "^0.0.4",
-    "@nathanfaucett/task": "^0.0.6",
-    "@nathanfaucett/values": "^0.0.1",
+    "@nathanfaucett/task": "^0.0.7",
+    "@nathanfaucett/values": "^0.0.2",
     "bufferutil": "^1.2.1",
     "gulp-envify": "^1.0.0",
     "gulp-jsbeautifier": "^2.0.3",
@@ -52,22 +52,22 @@
     "@nathanfaucett/array-for_each": "0.0.1",
     "@nathanfaucett/array-map": "^0.0.1",
     "@nathanfaucett/blur_node": "^0.0.1",
-    "@nathanfaucett/create_pool": "^0.0.1",
-    "@nathanfaucett/dom_caret": "^0.0.1",
+    "@nathanfaucett/create_pool": "^0.0.3",
+    "@nathanfaucett/dom_caret": "^0.0.2",
     "@nathanfaucett/dom_dimensions": "^0.0.1",
     "@nathanfaucett/empty_function": "^0.0.1",
     "@nathanfaucett/environment": "^0.0.2",
     "@nathanfaucett/escape_text_content": "^0.0.1",
-    "@nathanfaucett/event_listener": "^0.0.1",
+    "@nathanfaucett/event_listener": "^0.0.2",
     "@nathanfaucett/extend": "^0.0.2",
     "@nathanfaucett/focus_node": "^0.0.1",
     "@nathanfaucett/get_event_char_code": "^0.0.1",
     "@nathanfaucett/get_event_key": "^0.0.1",
     "@nathanfaucett/get_prototype_of": "^0.0.1",
-    "@nathanfaucett/get_window": "0.0.1",
-    "@nathanfaucett/has": "^0.0.1",
+    "@nathanfaucett/get_window": "0.0.2",
+    "@nathanfaucett/has": "^0.0.2",
     "@nathanfaucett/index_of": "^0.0.1",
-    "@nathanfaucett/inherits": "^0.0.2",
+    "@nathanfaucett/inherits": "^0.0.3",
     "@nathanfaucett/is_array": "^0.0.1",
     "@nathanfaucett/is_document": "^0.0.1",
     "@nathanfaucett/is_element": "^0.0.1",
@@ -78,13 +78,13 @@
     "@nathanfaucett/is_object": "^0.0.1",
     "@nathanfaucett/is_string": "^0.0.1",
     "@nathanfaucett/is_undefined": "^0.0.1",
-    "@nathanfaucett/key_mirror": "^0.0.1",
+    "@nathanfaucett/key_mirror": "^0.0.2",
     "@nathanfaucett/messenger": "^0.0.3",
     "@nathanfaucett/messenger_adapter": "^0.0.1",
     "@nathanfaucett/messenger_websocket_adapter": "^0.0.1",
     "@nathanfaucett/messenger_worker_adapter": "^0.0.1",
     "@nathanfaucett/now": "^0.0.3",
-    "@nathanfaucett/supports": "^0.0.1",
-    "@nathanfaucett/virt": "^0.0.11"
+    "@nathanfaucett/supports": "^0.0.2",
+    "@nathanfaucett/virt": "^0.0.12"
   }
 }
